<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-5819132225601729/2763317890" />
    
<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_rules"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.0" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_touch_screen_to_fire_at_the_planes" 
        android:textSize="16sp"/>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_drop"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crash_hurt" 
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_drag_your_finger_on_the_screen_to_fire_faster" 
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_some_planes_follow_your_dragon"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_some_planes_are_fast"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_some_planes_fire_at_your_dragon"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_take_flags_to_increase_firepower_or_drain_life"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/flag3"
        android:text="@string/multi_shot_flag"
        android:textSize="16sp" />
    


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/flag2"
        android:text="@string/rapid_shot_flag"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/flag1"
        android:text="@string/life_drain_flag"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_the_flags_are_effective_for_limited_time"
        android:textSize="16sp" />
    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnGameInfo"
        style="@style/main_menu_style" 
        android:text="@string/back"
        android:onClick="onClickBtnGameInfo" />
    
    <Button
        android:id="@+id/btnDemoGameInfo"
        style="@style/main_menu_style" 
        android:text="@string/demo"
        android:onClick="onClickBtnDemoGameInfo" />
    
     

</LinearLayout>