<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-5819132225601729/9069033490" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtGameMenu"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:gravity="center"
            android:text="@string/game_menu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnInterstitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="gone"
            android:onClick="onClickInterstitialAd"
            android:text="@string/ad_interstitial" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNewGame"
        style="@style/main_menu_style"
        android:onClick="onClickNewGame"
        android:text="@string/new_game" />

    <Button 
    	style="@style/main_menu_style"   
    	android:id="@+id/btnOptions"
        android:text="@string/options" 
        android:onClick="onClickOptions"
    />
    <Button 
        style="@style/main_menu_style"   
        android:id="@+id/btnGameRules"
        android:text="@string/game_rules" 
        android:onClick="onClickGameRules"
    />
    <Button 
        style="@style/main_menu_style"   
        android:id="@+id/btnScores"
        android:text="@string/scores" 
        android:onClick="onClickScores"
    />
    <Button 
        style="@style/main_menu_style"   
        android:id="@+id/btnAbout"
        android:text="@string/about" 
        android:onClick="onClickAbout"
    />
    <Button 
        style="@style/main_menu_style"   
        android:id="@+id/btnExit"
        android:text="@string/exit"
        android:onClick="onClickExit"
    />
    
	<!-- <com.google.ads.AdView 
	    android:id="@+id/adView"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	ads:adUnitId="a150bfcc2f17e8a"
    	ads:adSize="BANNER"
    	ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
    	ads:loadAdOnCreate="true"
    />	 -->
    	
</LinearLayout>