<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="100dp"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <Button
        android:id="@+id/btnInterstitial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="onClickInterstitialAd"
        android:text="@string/ad_interstitial"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#EE1111" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CCCC00"
        android:cursorVisible="true"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:paddingBottom="3sp"
        android:paddingTop="3sp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"
        android:textStyle="italic" />

    <Button
        android:id="@+id/dialog_button_ok"
        style="@style/main_menu_style"
        android:layout_marginTop="6dp"
        android:onClick="onClickOk"
        android:text="@string/dialog_submit_button" />

</LinearLayout>